laborations/lab1/test/bad/bad101.cc
int main () {
	1 + int;
}
